force-app/main/default/objects/SearchProperties__c/SearchProperties__c.object-meta.xml
<CustomObject>
    <label>SearchProperties</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>SearchProperties Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SearchProperties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>