force-app/main/default/objects/SearchProperties__c/fields/City_Secondary__c.field-meta.xml
<CustomField>
    <fullName>City_Secondary__c</fullName>
    <label>City (Secondary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>