force-app/main/default/objects/SearchProperties__c/fields/Community_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Community_Secondary__c</fullName>
    <label>Community (Secondary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>