force-app/main/default/objects/SearchProperties__c/fields/Dubizzle_Building_name__c.field-meta.xml
<CustomField>
    <fullName>Dubizzle_Building_name__c</fullName>
    <label>Building name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>