force-app/main/default/objects/SearchProperties__c/fields/Dubizzle_Locationtext__c.field-meta.xml
<CustomField>
    <fullName>Dubizzle_Locationtext__c</fullName>
    <label>Dubizzle Locationtext</label>
    <length>30</length>
    <type>Text</type>
</CustomField>