force-app/main/default/objects/SearchProperties__c/fields/External_Search_properties_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Search_properties_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Search properties Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>