force-app/main/default/objects/SearchProperties__c/fields/PortalType__c.field-meta.xml
<CustomField>
    <fullName>PortalType__c</fullName>
    <label>PortalType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PropertyFinder</fullName>
            </value>
            <value>
                <fullName>Dubizzle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>