force-app/main/default/objects/SearchProperties__c/fields/Property_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Property_Secondary__c</fullName>
    <label>Property (Secondary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>