force-app/main/default/objects/SearchProperties__c/fields/PropertyName__c.field-meta.xml
<CustomField>
    <fullName>PropertyName__c</fullName>
    <label>PropertyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>