force-app/main/default/objects/SearchProperties__c/fields/Subcommunity_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Subcommunity_Secondary__c</fullName>
    <label>Subcommunity (Secondary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>