force-app/main/default/objects/SearchProperties__c/fields/SubcommunityName__c.field-meta.xml
<CustomField>
    <fullName>SubcommunityName__c</fullName>
    <label>SubcommunityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>