force-app/main/default/objects/SearchProperties__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CityName__c</columns>
    <columns>CommunityName__c</columns>
    <columns>PropertyName__c</columns>
    <columns>SubcommunityName__c</columns>
    <columns>External_Search_properties_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>